Bonus system added and bugs fixed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <button id="start">Start</button>
+    <p id="score"></p>
     <canvas id="snake-game" width="505px" height="505px">Havelåge</canvas>
 </body>
 </html>
